turmites.lessons.turmites.langtoncolors.LangtonColors.scala.error
LangtonsAnt:8: error: not found: value setCouleurSol
        setCouleurSol(colors(i+1))
        ^LangtonsAnt:13: error: not found: value setCouleurSol
        setCouleurSol(colors(i+1))
        ^